--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,15 @@ body header > .header-bottom {
   z-index: 999;
   width: 100%;
   padding: var(--bg-full-p-y, inherit) 0;
+  max-height: 100vh;
+  top: 0;
+  overflow-x: scroll;
+}
+
+@media (min-width: 992px) {
+  body header > .header-bottom {
+    overflow-x: initial;
+  }
 }
 body.front header > .header-bottom {
   background: var(--bg-full, transparent);
